routings (need refactor)

--- a/src/app/trip-detail/trip-detail.component.html
+++ b/src/app/trip-detail/trip-detail.component.html
@@ -1,4 +1,5 @@
 
+
 <div *ngIf="trip">
 
     <h2>{{trip.name | uppercase}} Details</h2>
@@ -7,8 +8,8 @@
     <div><span>airportTo: </span>{{trip.airportTo}}</div>
     <div><span>hotelTo: </span>{{trip.hotelTo}}</div>
     <div><span>cityTo: </span>{{trip.cityTo}}</div>
-    <div><span>departureDate: </span>{{trip.departureDate}}</div>
-    <div><span>returnDate: </span>{{trip.returnDate}}</div>
+    <div><span>departureDate: </span>{{datawyl}}</div>
+    <div><span>returnDate: </span>{{dataprzyl}}</div>
     <div><span>countOfDays: </span>{{trip.countOfDays}}</div>
     <div><span>type: </span>{{trip.type}}</div>
     <div><span>priceForAdult: </span>{{trip.priceForAdult}}</div>
