--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -35,7 +35,7 @@ template: `
 
   </div> -->
 
-  <app-trip-detail [trip]="selectedTrip"></app-trip-detail>
+  <app-trip-detail [trip]="selectedTrip" [dataprzyl] ="dataprzyl" [datawyl] ="datawyl"></app-trip-detail>
 
 
   <ul class="trips">
